--- a/src/sass/theme/_body.scss
+++ b/src/sass/theme/_body.scss
@@ -47,6 +47,12 @@ html :where(.wp-block) {
 	}
 }
 
+[class*='col-']{
+	&.acf-block-component{
+		width: 100%!important;
+	}
+}
+
 /*
 .row.block-editor-block-list__layout{
 	>.is-style-col-lg-12{
