--- a/src/sass/theme/_components.scss
+++ b/src/sass/theme/_components.scss
@@ -289,6 +289,15 @@
 	}
 }
 
+.service-section-wrapper{
+	>.wp-block-columns{
+		&:not(:last-child){
+			padding-bottom: 1.5rem;
+			border-bottom: solid 1px rgba($scorpion, .15);
+		}
+	}
+}
+
 .wp-block-separator{
 	border-top: solid 1px;
 	margin: 2rem 0;
