--- a/src/sass/theme/_helpers.scss
+++ b/src/sass/theme/_helpers.scss
@@ -231,6 +231,20 @@
 	background-color: $secondary;
 }
 
+.bg-concrete{
+	//background-image: url("https://www.transparenttextures.com/patterns/grunge-wall.png");
+	@include media-breakpoint-down(lg){
+		//background-image: url("https://www.transparenttextures.com/patterns/concrete-wall.png")!important;
+		background-image: url("https://www.transparenttextures.com/patterns/grunge-wall.png")!important;
+		background-size: auto!important;
+		background-repeat: repeat!important;
+		
+		&:after{
+			//background-color: rgba(100, 100, 100, 0.05)!important;
+		}
+	}
+}
+
 .bg-gray{
 	background-color: $neutral;
 }
