--- a/src/sass/theme/_banners.scss
+++ b/src/sass/theme/_banners.scss
@@ -6,7 +6,9 @@
 		background-size: contain;
 		background-repeat: no-repeat;
 		background-position: bottom right;
-		background-image: url('http://robm288.sg-host.com/wp-content/uploads/2025/01/concrete-a.jpg');
+		@include media-breakpoint-up(lg){
+			background-image: url('http://robm288.sg-host.com/wp-content/uploads/2025/01/concrete-a.jpg');
+		}
 		
 		>.container{
 			padding-bottom: 3rem;
