--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -18074,11 +18074,15 @@ body .facetwp-flyout {
   background-color: #2f2f2f;
 }
 
-@media (max-width: 991.98px) {
+.bg-concrete {
+  background-image: url("/wp-content/uploads/2025/03/grunge-wall.webp");
+  background-repeat: repeat;
+}
+@media (min-width: 992px) {
   .bg-concrete {
-    background-image: url("https://www.transparenttextures.com/patterns/grunge-wall.png") !important;
-    background-size: auto !important;
-    background-repeat: repeat !important;
+    background-image: url("/wp-content/uploads/2025/01/concrete-bg.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
   }
 }
 
