--- a/src/sass/theme/_helpers.scss
+++ b/src/sass/theme/_helpers.scss
@@ -231,6 +231,9 @@
 	background-color: $secondary;
 }
 
+.bg-light-gray{
+	background-color: #f8f8f8;
+
 .bg-concrete{
 	background-image:url("/wp-content/uploads/2025/03/grunge-wall.webp");
 	background-repeat: repeat;
