--- a/src/sass/theme/_helpers.scss
+++ b/src/sass/theme/_helpers.scss
@@ -233,6 +233,7 @@
 
 .bg-light-gray{
 	background-color: #f8f8f8;
+}
 
 .bg-concrete{
 	background-image:url("/wp-content/uploads/2025/03/grunge-wall.webp");
